--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "homework with webpack",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --config ./webpack/webpack.config.dev.js",
+    "build": "webpack --config ./webpack/webpack.config.prod.js",
+    "start": "webpack-dev-server --config ./webpack/webpack.config.dev.js --open",
+    "lint": "eslint ./src"
   },
   "keywords": [
     "js",
@@ -24,6 +24,12 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
@@ -38,6 +44,8 @@
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
+    "babel-eslint": "^10.1.0",
+    "eslint-loader": "^4.0.0",
     "i": "^0.3.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
